--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1 style="font-family: Lobster, cursive">SwiftIntro <span style="font-size: 20px">Beta</span></h1>
+            <h1 style="font-family: Lobster, cursive">SwiftIntro <span style="font-size: 16px">Beta</span></h1>
             <h2>Connecting top talent with interesting job opportunities</h2>
-            <p>Sign up below to find your dream job or employee</p>
+            <h4>Sign up below to find your dream job or employee</h4>
             <br>
             <div class="call-to-action">
                 <a href="http://eepurl.com/2rVF1" class="btn btn-lg btn-light">Candidates</a>
@@ -54,8 +54,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>SwiftIntro</strong>
-                    </h4>
+
                     <ul class="list-unstyled">
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@swiftintro.com">info@swiftintro.com</a>
                         </li>
