Change from interesting to exceptional

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1 style="font-family: Lobster, cursive">SwiftIntro <span style="font-size: 16px">Beta</span></h1>
-            <h2>Connecting top talent with interesting job opportunities</h2>
+            <h2>Connecting top talent with exceptional job opportunities</h2>
             <h4>Sign up below to find your dream job or employee</h4>
             <br>
             <div class="call-to-action">
