--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Connecting top talent with exceptional job opportunities">
+
+    <meta property="og:title" content="SwiftIntro" />
+    <meta property="og:site_name" content="SwiftIntro" />
+    <meta property="og:url" content="https://www.swiftintro.com/" />
+    <meta property="og:description" content="Connecting top talent with exceptional job opportunities" />
+    <meta property="og:image" content="http://i.imgur.com/C82WLIN.png" />
 
     <title>SwiftIntro</title>
 
